Solucion de ListView
En el MainViewModel en el contructor instance = this;
y asi se soluciono correctamente

--- a/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/LandsPage.xaml
+++ b/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/LandsPage.xaml
@@ -30,11 +30,11 @@
                                         <Label 
                                             FontAttributes="Bold"
                                             FontSize="Medium" 
-                                            Text="{Binding Alpha2Code}"
+                                            Text="{Binding Name}"
                                             TextColor="Black">
                                         </Label>
                                         <Label 
-                                            Text="{Binding Area}"
+                                            Text="{Binding Capital}"
                                             TextColor="Black">
                                         </Label>
                                     </StackLayout>
