Se implemento el buscador

--- a/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/LandsPage.xaml
+++ b/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/LandsPage.xaml
@@ -8,6 +8,13 @@
         <StackLayout
             BindingContext="{Binding Lands}"
             Padding="5">
+
+            <SearchBar 
+                Text="{Binding Filter, Mode=TwoWay}"
+                Placeholder="Search..."
+                SearchCommand="{Binding SearchCommand}">
+                
+            </SearchBar>
             
             <ListView                                
                 HasUnevenRows="true" 
