--- a/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/BordersPage.xaml
+++ b/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/BordersPage.xaml
@@ -6,12 +6,41 @@
              Icon="ic_action_language"
              Title="Borders">
     <ContentPage.Content>
-        <StackLayout>
-            <Label
-                VerticalOptions="CenterAndExpand"
-                HorizontalOptions="CenterAndExpand"
-                Text="Borders">        
-            </Label>
+        <StackLayout
+            BindingContext="{Binding Land}">
+            
+            <ListView
+                ItemsSource="{Binding Borders}"
+                HasUnevenRows="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>                           
+                               
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="3*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                        <Label 
+                                            Grid.Column="0"
+                                            FontAttributes="Bold"
+                                            FontSize="Medium" 
+                                            Text="{Binding Code}"
+                                            TextColor="Black">
+                                        </Label>
+                                        <Label 
+                                            Grid.Column="1"
+                                            Text="{Binding Name}"
+                                            TextColor="Black">
+                                        </Label>
+                                    
+                                </Grid>
+                            
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
