--- a/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/BordersPage.xaml
+++ b/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/BordersPage.xaml
@@ -7,6 +7,7 @@
              Title="Borders">
     <ContentPage.Content>
         <StackLayout
+            Padding="10"
             BindingContext="{Binding Land}">
             
             <ListView
