--- a/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/LanguagesPage.xaml
+++ b/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Views/LanguagesPage.xaml
@@ -6,12 +6,54 @@
              Icon="ic_action_people"
              Title="Languages">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout
+            Padding="10"
+            BindingContext="{Binding Land}">
+
             <Label
                 VerticalOptions="CenterAndExpand"
                 HorizontalOptions="CenterAndExpand"
                 Text="Languages">
             </Label>
+
+            <ListView
+                ItemsSource="{Binding Languages}"
+                HasUnevenRows="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="2*"/>
+                                    <ColumnDefinition Width="2*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Label 
+                                            Grid.Column="0"
+                                            FontAttributes="Bold"
+                                            FontSize="Medium" 
+                                            Text="{Binding Iso6391}"
+                                            TextColor="Black">
+                                </Label>
+                                <Label 
+                                            Grid.Column="1"
+                                            Text="{Binding Name}"
+                                            TextColor="Black">
+                                </Label>
+                                <Label 
+                                            Grid.Column="2"
+                                            Text="{Binding NativeName}"
+                                            TextColor="Black">
+                                </Label>
+
+                            </Grid>
+
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
